--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="{{ 'css/main.css' | relative_url }}">
 
   <title>Jekyll starter template</title>
 </head>
@@ -15,4 +15,4 @@
   {{ content }}
 
 </body>
-</html> 
+</html>
